--- a/MA23M002_Feb5.ipynb
+++ b/MA23M002_Feb5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO33HYtMIbpEXXr2/PJKPVI",
+      "authorship_tag": "ABX9TyNpcbp/ONc0Y4elG2W7sUYt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7sXTNl9D8lAk",
-        "outputId": "df3d825a-ea78-4c09-dab6-777269f25c6f"
+        "outputId": "3af424a2-c453-4ace-c942-211e81d6af3e"
       },
       "outputs": [
         {
@@ -84,7 +84,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fJizBEJAAkhl",
-        "outputId": "c8f77a50-68fd-4ac6-8fc4-6674eef22667"
+        "outputId": "e31cfd84-790e-40a9-9f88-c869e78fdd07"
       },
       "execution_count": 3,
       "outputs": [
@@ -111,7 +111,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wfymIVYiBGDJ",
-        "outputId": "8d81b9da-6bf5-455c-b517-8ea886039e49"
+        "outputId": "158a6b18-228e-4ccb-f083-df7624bfd1a4"
       },
       "execution_count": 4,
       "outputs": [
@@ -138,9 +138,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bRdctEXrBXfp",
-        "outputId": "15f487f4-ceb0-4aa6-a570-f0ed02570bf6"
+        "outputId": "de932ea1-5508-4075-b65e-242407ae625f"
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +150,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 5
         }
       ]
     },
@@ -165,9 +165,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "monA2AYDBlnA",
-        "outputId": "1815f3f8-0d69-414e-867d-11882cd2a2c8"
+        "outputId": "210ac97c-bdb5-4e1e-f198-a62bf77b0523"
       },
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,11 +179,11 @@
             "4\n",
             "5\n",
             "6\n",
-            "A\n",
-            ")\n",
-            "B\n",
-            "b\n",
             "h\n",
+            "b\n",
+            "B\n",
+            ")\n",
+            "A\n",
             "a\n"
           ]
         }
@@ -197,7 +197,7 @@
       "metadata": {
         "id": "CHvW_MEbCU9V"
       },
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -210,9 +210,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DaounmWwC3xV",
-        "outputId": "80508cfd-7682-4c8b-e41b-2ca7fa5d1762"
+        "outputId": "80c99f60-e973-4dd8-dae2-3cb2817b5a7c"
       },
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,9 +233,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TlRaU8-iDJDM",
-        "outputId": "1788a846-9715-4bc2-f013-da0f08651bb8"
+        "outputId": "1480adda-1a08-4f11-ec1b-9a49aaa86240"
       },
-      "execution_count": 22,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +245,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 9
         }
       ]
     },
@@ -257,7 +257,7 @@
       "metadata": {
         "id": "43PEt867DWOl"
       },
-      "execution_count": 24,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -270,9 +270,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7uCKkbkiDq5k",
-        "outputId": "e2d00a8b-8d5c-46d2-f9ef-bd029eef0bac"
+        "outputId": "7cfd63b9-7009-4ca4-f33f-8fe8c11f65e3"
       },
-      "execution_count": 25,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +282,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 11
         }
       ]
     },
@@ -294,7 +294,7 @@
       "metadata": {
         "id": "_3btlRTZDy7B"
       },
-      "execution_count": 26,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -307,9 +307,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1v-bjw2kD1Gw",
-        "outputId": "1cf43497-2b87-4707-f6de-76998b129d6c"
+        "outputId": "5ad4f42a-8cbd-44d3-e7e8-40eb9ff9600d"
       },
-      "execution_count": 27,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +319,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 13
         }
       ]
     },
@@ -331,7 +331,7 @@
       "metadata": {
         "id": "RieyQWtCD1q8"
       },
-      "execution_count": 35,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -344,9 +344,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jWTTnTykD32i",
-        "outputId": "6eba9499-8324-4301-9040-f0a7e8c5d2ad"
+        "outputId": "7c20eea6-117c-4e09-977e-48e917846efc"
       },
-      "execution_count": 31,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -356,7 +356,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 15
         }
       ]
     },
@@ -371,9 +371,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NPmelITKEB5F",
-        "outputId": "ca1b1612-6d85-4d46-8f02-4cb3e27881fe"
+        "outputId": "b4790ff5-1bbf-471e-afd6-e7c55c1128cc"
       },
-      "execution_count": 33,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,35 +383,237 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 16
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "y.remove(1,4,5)"
+        "y.remove(1)"
+      ],
+      "metadata": {
+        "id": "QFxgO8mPEVCG"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = {4,-1,7,8}"
+      ],
+      "metadata": {
+        "id": "-kKp4ePEE43s"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.update(y)\n",
+        "x"
+      ],
+      "metadata": {
+        "id": "87FQLE_OF-Yd",
+        "outputId": "09f0fd88-91ed-4567-a15d-e67a9c12586e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{')', -1, 0, 4, 5, 6, 7, 8, 'A', 'B', 'a', 'b', 'h'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.issuperset(y)"
+      ],
+      "metadata": {
+        "id": "2SnJ0uJKGUxt",
+        "outputId": "e96d095a-cbd6-4e05-fc26-728e6a53fe3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y.issubset(x)"
+      ],
+      "metadata": {
+        "id": "F-NtnUewG4L2",
+        "outputId": "aeed8e15-195b-4006-9746-8197113fe967",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x == y"
+      ],
+      "metadata": {
+        "id": "21gkk_GDGZ2e",
+        "outputId": "76c67309-31d1-46e1-8d86-e4647987e4ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x>y"
+      ],
+      "metadata": {
+        "id": "50dj9RHcGpky",
+        "outputId": "b0fca2df-9751-4816-b149-8f136ee4a174",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(*x)"
+      ],
+      "metadata": {
+        "id": "szZk18MzGqxA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e74bbefd-f406-4423-9634-1ca479080608"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 4 5 6 7 8 h a b B ) A -1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "setA = {i for i in range(10)}\n",
+        "setA"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 179
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "QFxgO8mPEVCG",
-        "outputId": "51bb4cbd-5d1e-47db-9a94-bcd4adc7bc83"
+        "id": "iFcdkXjnHe7T",
+        "outputId": "f5128b6f-0428-4bff-a952-bb5e3c1e34eb"
       },
-      "execution_count": 37,
+      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "unhashable type: 'list'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-37-46f603c7e4ea>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tupA = tuple([x for x in range(5)])\n",
+        "tupA"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Erz32P4ZITvs",
+        "outputId": "8b12d758-7eb0-4730-a3c5-795a2eb5e40e"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0, 1, 2, 3, 4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
         }
       ]
     },
@@ -419,7 +621,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "-kKp4ePEE43s"
+        "id": "67Bh48a7ItGW"
       },
       "execution_count": null,
       "outputs": []
