--- a/MA23M002_Feb5.ipynb
+++ b/MA23M002_Feb5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpcbp/ONc0Y4elG2W7sUYt",
+      "authorship_tag": "ABX9TyN6q1Ko3qouSt0SZVTeMQe2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/abhinavtk1/ED5340/blob/main/MA23M002_Feb5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/abhinavtk1/ED5340-CW/blob/main/MA23M002_Feb5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "nwfO2KDn-8uc"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
         "id": "fJizBEJAAkhl",
         "outputId": "e31cfd84-790e-40a9-9f88-c869e78fdd07"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +113,7 @@
         "id": "wfymIVYiBGDJ",
         "outputId": "158a6b18-228e-4ccb-f083-df7624bfd1a4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -140,7 +140,7 @@
         "id": "bRdctEXrBXfp",
         "outputId": "de932ea1-5508-4075-b65e-242407ae625f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -167,7 +167,7 @@
         "id": "monA2AYDBlnA",
         "outputId": "210ac97c-bdb5-4e1e-f198-a62bf77b0523"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
       "metadata": {
         "id": "CHvW_MEbCU9V"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "id": "DaounmWwC3xV",
         "outputId": "80c99f60-e973-4dd8-dae2-3cb2817b5a7c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,7 +235,7 @@
         "id": "TlRaU8-iDJDM",
         "outputId": "1480adda-1a08-4f11-ec1b-9a49aaa86240"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,7 +257,7 @@
       "metadata": {
         "id": "43PEt867DWOl"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -272,7 +272,7 @@
         "id": "7uCKkbkiDq5k",
         "outputId": "7cfd63b9-7009-4ca4-f33f-8fe8c11f65e3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -294,7 +294,7 @@
       "metadata": {
         "id": "_3btlRTZDy7B"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +309,7 @@
         "id": "1v-bjw2kD1Gw",
         "outputId": "5ad4f42a-8cbd-44d3-e7e8-40eb9ff9600d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -331,7 +331,7 @@
       "metadata": {
         "id": "RieyQWtCD1q8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,7 +346,7 @@
         "id": "jWTTnTykD32i",
         "outputId": "7c20eea6-117c-4e09-977e-48e917846efc"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -373,7 +373,7 @@
         "id": "NPmelITKEB5F",
         "outputId": "b4790ff5-1bbf-471e-afd6-e7c55c1128cc"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +395,7 @@
       "metadata": {
         "id": "QFxgO8mPEVCG"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +406,7 @@
       "metadata": {
         "id": "-kKp4ePEE43s"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -422,7 +422,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -448,7 +448,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +474,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -500,7 +500,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +526,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +552,7 @@
         },
         "outputId": "e74bbefd-f406-4423-9634-1ca479080608"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +576,7 @@
         "id": "iFcdkXjnHe7T",
         "outputId": "f5128b6f-0428-4bff-a952-bb5e3c1e34eb"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -603,7 +603,7 @@
         "id": "Erz32P4ZITvs",
         "outputId": "8b12d758-7eb0-4730-a3c5-795a2eb5e40e"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -619,9 +619,33 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "setB = {i**2 for i in range(1,10)}\n",
+        "print(setB)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "67Bh48a7ItGW",
+        "outputId": "1b3ecb58-3246-4c03-ebcc-865c820f1909"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{64, 1, 4, 36, 9, 16, 49, 81, 25}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "67Bh48a7ItGW"
+        "id": "Udl-xW_CJaUp"
       },
       "execution_count": null,
       "outputs": []
